--- a/views/index.html
+++ b/views/index.html
@@ -61,7 +61,13 @@
                     <p class="lead">Бесплатно проверяйте сайты на SEO пригодность</p>
                     <form action="/urls" method="post" class="row" required="">
                         <div class="col-8">
-                            <input type="text" name="url[name]" value="" class="form-control form-control-lg" placeholder="https://www.example.com">
+                            <input type="text" name="url[name]" value="{% if oldValue %} {{ oldValue }}{% endif %}" class="form-control form-control-lg {% if error %} is-invalid {% endif %}" placeholder="https://www.example.com">
+                            {% if error %}
+                            <div class="invalid-feedback">
+                                {{ error }}
+                            </div>
+                            {% endif %}
+
                         </div>
                         <div class="col-2">
                             <input type="submit" class="btn btn-primary btn-lg ms-3 px-5 text-uppercase mx-3" value="Проверить">
