--- a/views/urls.html
+++ b/views/urls.html
@@ -19,7 +19,7 @@
                         {{ row.name }}
                     </a>
                 </td>
-                <td></td>
+                <td>{{ row.last_check }}</td>
                 <td></td>
             </tr>
             {% endfor %}
