--- a/views/urls.html
+++ b/views/urls.html
@@ -20,7 +20,7 @@
                     </a>
                 </td>
                 <td>{{ row.last_check }}</td>
-                <td></td>
+                <td>{{ row.status_code }}</td>
             </tr>
             {% endfor %}
         </tbody>
