--- a/views/show.url.html
+++ b/views/show.url.html
@@ -21,7 +21,7 @@
     </table>
 </div>
 <h2 class="mt-5 mb-3">Проверки</h2>
-<form method="post" action="/urls/{{ urlInfo.id }}/checks">
+<form method="post" action="{{ url_for('checks.make', {'url_id' : urlInfo.id}) }}">
     <input type="submit" class="btn btn-primary" value="Запустить проверку">
 </form>
 <table class="table table-bordered table-hover" data-test="checks">
