--- a/views/index.twig
+++ b/views/index.twig
@@ -1,55 +1,57 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Анализатор страниц</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
+
 <body class="min-vh-100 d-flex flex-column">
     <header class="flex-shrink-0">
         <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
             <a class="navbar-brand" href="{{ url_for('index') }}">Анализатор страниц</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     {% set pages = [
-                        {
-                            'name': 'index',
-                            'title': 'Главная'
-                        },
-                        {
-                            'name': 'urls',
-                            'title': 'Сайты'
-                        },
+                    {
+                    'name': 'index',
+                    'title': 'Главная'
+                    },
+                    {
+                    'name': 'urls.index',
+                    'title': 'Сайты'
+                    },
                     ] %}
                     {% for page in pages %}
-                        <li class="nav-item">
-                            <a 
-                                class="nav-link {% if is_current_url(page.name) %} active {% endif %}" 
-                                href="{{ url_for(page.name) }}"
-                            >{{ page.title }}</a>
-                        </li>                        
+                    <li class="nav-item">
+                        <a class="nav-link {% if is_current_url(page.name) %} active {% endif %}"
+                            href="{{ url_for(page.name) }}">{{ page.title }}</a>
+                    </li>
                     {% endfor %}
 
                 </ul>
             </div>
         </nav>
     </header>
-    
+
     {% for message in messages.success %}
-        <div class="alert alert-success" role="alert">
-            {{ message }}
-        </div>
+    <div class="alert alert-success" role="alert">
+        {{ message }}
+    </div>
     {% endfor %}
-    
+
     {% for message in messages.error %}
-        <div class="alert alert-danger" role="alert">
-            {{ message }}
-        </div>
+    <div class="alert alert-danger" role="alert">
+        {{ message }}
+    </div>
     {% endfor %}
 
     <main class="flex-grow-1">
@@ -61,16 +63,19 @@
                     <p class="lead">Бесплатно проверяйте сайты на SEO пригодность</p>
                     <form action="/urls" method="post" class="row" required="">
                         <div class="col-8">
-                            <input type="text" name="url[name]" value="{% if oldValue %} {{ oldValue }}{% endif %}" class="form-control form-control-lg {% if error %} is-invalid {% endif %}" placeholder="https://www.example.com">
-                            {% if error %}
+                            <input type="text" name="url[name]" value="{% if oldValue %} {{ oldValue }}{% endif %}"
+                                class="form-control form-control-lg {% if errors %} is-invalid {% endif %}"
+                                placeholder="https://www.example.com">
+                            {% if errors %}
                             <div class="invalid-feedback">
-                                {{ error }}
+                                {{ errors|first }}
                             </div>
                             {% endif %}
 
                         </div>
                         <div class="col-2">
-                            <input type="submit" class="btn btn-primary btn-lg ms-3 px-5 text-uppercase mx-3" value="Проверить">
+                            <input type="submit" class="btn btn-primary btn-lg ms-3 px-5 text-uppercase mx-3"
+                                value="Проверить">
                         </div>
                     </form>
                 </div>
@@ -86,5 +91,7 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 </body>
