--- a/views/index.twig
+++ b/views/index.twig
@@ -1,97 +1,24 @@
-<!DOCTYPE html>
-<html lang="ru">
+{% extends "layout.twig" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Анализатор страниц</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-</head>
+{% block main %}
+	<div class="row">
+		<div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
+			<h1 class="display-3">Анализатор страниц</h1>
+			<p class="lead">Бесплатно проверяйте сайты на SEO пригодность</p>
+			<form action="/urls" method="post" class="row" required="">
+				<div class="col-8">
+					<input type="text" name="url[name]" value="{% if oldValue %} {{ oldValue }}{% endif %}" class="form-control form-control-lg {% if errors %} is-invalid {% endif %}" placeholder="https://www.example.com">
+					{% if errors %}
+						<div class="invalid-feedback">
+							{{ errors|first }}
+						</div>
+					{% endif %}
 
-<body class="min-vh-100 d-flex flex-column">
-    <header class="flex-shrink-0">
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
-            <a class="navbar-brand" href="{{ url_for('index') }}">Анализатор страниц</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    {% set pages = [
-                    {
-                    'name': 'index',
-                    'title': 'Главная'
-                    },
-                    {
-                    'name': 'urls.index',
-                    'title': 'Сайты'
-                    },
-                    ] %}
-                    {% for page in pages %}
-                    <li class="nav-item">
-                        <a class="nav-link {% if is_current_url(page.name) %} active {% endif %}"
-                            href="{{ url_for(page.name) }}">{{ page.title }}</a>
-                    </li>
-                    {% endfor %}
-
-                </ul>
-            </div>
-        </nav>
-    </header>
-
-    {% for message in messages.success %}
-    <div class="alert alert-success" role="alert">
-        {{ message }}
-    </div>
-    {% endfor %}
-
-    {% for message in messages.error %}
-    <div class="alert alert-danger" role="alert">
-        {{ message }}
-    </div>
-    {% endfor %}
-
-    <main class="flex-grow-1">
-        <div class="container-lg mt-3">
-            {% block main %}
-            <div class="row">
-                <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
-                    <h1 class="display-3">Анализатор страниц</h1>
-                    <p class="lead">Бесплатно проверяйте сайты на SEO пригодность</p>
-                    <form action="/urls" method="post" class="row" required="">
-                        <div class="col-8">
-                            <input type="text" name="url[name]" value="{% if oldValue %} {{ oldValue }}{% endif %}"
-                                class="form-control form-control-lg {% if errors %} is-invalid {% endif %}"
-                                placeholder="https://www.example.com">
-                            {% if errors %}
-                            <div class="invalid-feedback">
-                                {{ errors|first }}
-                            </div>
-                            {% endif %}
-
-                        </div>
-                        <div class="col-2">
-                            <input type="submit" class="btn btn-primary btn-lg ms-3 px-5 text-uppercase mx-3"
-                                value="Проверить">
-                        </div>
-                    </form>
-                </div>
-            </div>
-            {% endblock main %}
-        </div>
-    </main>
-    <footer class="border-top py-3 mt-5 flex-shrink-0">
-        <div class="container-lg">
-            <div class="text-center">
-                <a href="https://hexlet.io/pages/about" target="_blank">Hexlet</a>
-            </div>
-        </div>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
-</body>
+				</div>
+				<div class="col-2">
+					<input type="submit" class="btn btn-primary btn-lg ms-3 px-5 text-uppercase mx-3" value="Проверить">
+				</div>
+			</form>
+		</div>
+	</div>
+{% endblock main %}
