--- a/views/components/navbar.twig
+++ b/views/components/navbar.twig
@@ -7,15 +7,8 @@
 	</button>
 	<div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav">
-			{{ component.navlink({
-                route: 'index', 
-                title: 'Главная'
-            }) }}
-			{{ component.navlink({
-                route: 'urls.index', 
-                title: 'Сайты'
-            }) }}
-
+			{{ component.navlink({ route: 'index', title: 'Главная' }) }}
+			{{ component.navlink({ route: 'urls.index', title: 'Сайты' }) }}
 		</ul>
 	</div>
 </nav>
