--- a/views/components/navlink.twig
+++ b/views/components/navlink.twig
@@ -1,12 +1,6 @@
 {% component navlink {
-    route: {
-        type: 'string',
-        required: true
-    },
-    title: {
-        type: 'string',
-        required: true
-    }
+    route: { type: 'string', required: true },
+    title: { type: 'string', required: true }
 } with options %}
 
 <li class="nav-item">
