--- a/views/500.twig
+++ b/views/500.twig
@@ -9,6 +9,7 @@
     <p class="mb-4">Сервер не смог обработать ваш запрос</p>
     <p class="fs-5 text-black mb-3">Почему это произошло?</p>
     <p class="mb-4">{{ error|default('Неизвестно') }}</p>
+    <p>Номер строки: {{ line }}</p>
     <p class="fs-5 text-black mb-3">Что делать?</p>
     <p class="mb-2">Рекомендуем вернуться <a href="{{ url_for('index') }}">на главную</a>.</p>
     <p class="mb-2">Если ошибка повторяется, то сообщите владельцу сайта</p>
