--- a/views/index.twig
+++ b/views/index.twig
@@ -3,6 +3,7 @@
 	'Url.name is required': 'URL не должен быть пустым',
 	'Url.name is not a valid URL': 'Некорректный URL'
 } %}
+
 {% block main %}
 	<div class="row">
 		<div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
@@ -10,7 +11,7 @@
 			<p class="lead">Бесплатно проверяйте сайты на SEO пригодность</p>
 			<form action="/urls" method="post" class="row" required="">
 				<div class="col-8">
-					<input type="text" name="url[name]" value="{% if oldValue %} {{ oldValue }}{% endif %}" class="form-control form-control-lg {% if errors %} is-invalid {% endif %}" placeholder="https://www.example.com">
+					<input type="text" name="url[name]" value="{% if formData['url']['name'] %} {{ formData['url']['name'] }}{% endif %}" class="form-control form-control-lg {% if errors %} is-invalid {% endif %}" placeholder="https://www.example.com">
 					{% if errors %}
 						<div class="invalid-feedback">
 							{{ customErrormessages[errors['url.name']|first] }}
